--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -15,11 +15,17 @@
         <form id="addForm">
             <input type="text">
         </form>
-    </div>
+    </div><hr>
 <% } %>
 
-<% if (data) { %>
-    <div id="productContainer"></div>
-<% } %>
 
+<div id="productContainer"></div><hr>
+<h1>carrito</h1>
+<div id="cartContainer">
+</div>
+
+
+
+<script src="/socket.io/socket.io.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/ejs@3.1.6/ejs.min.js"></script>
 <script src="../js/home.js"></script>
